df-derive/tests/fail/113-fail-as-binary-with-as-str.stderr
error: field `bytes` combines `as_binary` with another override; `as_binary` produces a Binary column over a `Vec<u8>` shape and is mutually exclusive with `as_str`, `as_string`, `decimal(...)`, and `time_unit = "..."` — drop one
 --> tests/fail/113-fail-as-binary-with-as-str.rs:7:28
  |
7 |     #[df_derive(as_binary, as_str)]
  |                            ^^^^^^

error: first `as_binary` override declared here
 --> tests/fail/113-fail-as-binary-with-as-str.rs:7:17
  |
7 |     #[df_derive(as_binary, as_str)]
  |                 ^^^^^^^^^
